--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -3,7 +3,7 @@
 {% block content %}
             <section class="conteudo">
                 <section class="banner">
-                    <img class="banner__imagem" src="{%static '/assets/imagens/Banner(2).png'%}" alt="banner Alura Space">
+                    <img class="banner__imagem" src="{% static '/assets/imagens/Banner(2).png' %}" alt="banner Alura Space">
                     <h1 class="banner__titulo"> A galeria mais completa de fotos do espaço!</h1>
                 </section>
                 <section class="tags">
@@ -22,25 +22,25 @@
                             {% if cards %}
                             {% for fotografia in cards %}
                             <li class="card">
-                                <a href="{%url 'imagem' fotografia.id %}">
-                                {% if fotografia.foto == '' or fotografia.foto == null %}
-                                    <img class="card__imagem" src="{%static '/assets/imagens/galeria/not-found.png'%}" alt="foto">
+                                <a href="{% url 'imagem' fotografia.id %}">
+                                {% if fotografia.foto == "" or fotografia.foto == null %}
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png'%}" alt="foto">
                                 {% else %}
-                                <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
-                                {% endif%}
+                                    <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
+                                {% endif %}
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
-                                    <p class="card__titulo">{{ fotografia.nome }}</p>
+                                    <p class="card__titulo">{{fotografia.nome}}</p>
                                     <div class="card__texto">
-                                        <p class="card__descricao">{{ fotografia.legenda }}</p>
+                                        <p class="card__descricao">{{fotografia.legenda}}</p>
                                         <span>
-                                            <img src="{%static '/assets/ícones/1x/favorite_outline.png'%}" alt="ícone de coração">
+                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                                         </span>
                                     </div>
                                 </div>
-                            </li> 
-                            {% endfor %} 
+                            </li>
+                            {% endfor %}
                             {% else %}
                             <div class="imagem__texto">
                                 <p>Fotografias não encontradas</p>
@@ -52,5 +52,4 @@
             </section>
         </main>
     </div>
-    
 {% endblock %}
